syntax = "proto3";
option go_package = "Assignment-03/grpc/proto";


//represents a single ChatMessage
message ChatMessage {
  string message = 1;
  int64 timestamp = 2;
  int64 process_id = 3;
  string process_name = 4;
}

//represents a user
message Process{
  int64 id = 1;
  string name = 2;
  int64 timestamp = 3;
}

//the username the joining participant wants
message UserName{
  string name = 1;
}

//used for empty requests/responses
message Empty{}

//the Chit Chat service
service ChitChatService {
  //Connect getting a process id and timestamp set up by the server
  rpc Connect(UserName) returns (Process);
  //user instructs they disconnect, expecting nothing in return. Note the server will then send a message to all other
  //users (in their Connect rpc running concurrently) that the user has disconnecting.
  rpc Disconnect(Process) returns (Empty);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}